# glados

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  train_glados_wakeword.ipynb
models/: glados.onnx
src/voice_assistant/: __init__.py  assistant.py  config.py  wakeword.py
